--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ you are also allowed to apply online by using the following link<br>
 <button type="submit"><a href="http://127.0.0.1:5500/personal-details.html">Application form</a></button></p>
     
 <h5>APPLICATION DATELINE</h5>
-You are required to have submitted your application form by 1st April 2023 at 9:am<br><br>
+You are required to have submitted your application form by 22nd July 2023 at 9:am<br><br>
 <b>For more information click on the following link</b><br>
 <a href="https://www.unhcr.org/dafi-scholarships.html">Dafi</a>
 </form>
