--- a/submit.html
+++ b/submit.html
@@ -14,15 +14,20 @@
     float: right;
     width: 20%;
 }
+#img{
+    float: right;
+    width: 35%;
+}
     </style>
 </head>
 <body id="body">
     <img src="WINDLE.jpg" alt="windle">
+    <img src="unhcr.jpg" alt="unhcr"  id="unhcr"><br>
     <h1>Your application has been successfully received</h1>
    <h2>The successfully candidates will be called for the interviews through their email.</h2> 
    <h3>Thank you!!!</h3>
-   <img src="unhcr.jpg" alt="unhcr"  id="unhcr"><br>
   <button type="submit"><a href="index.html">Back</a></button>
+  <img src="SCHOLAR.jpeg" id="img"> 
   
 </body>
 </html>
